@@ -386,3 +386,71 @@ XGetWindowProperty(
     *prop_return = NULL;
     return BadValue;
 }
+
+/*
+ * The following functions were implemented as macros under Windows.
+ */
+
+int
+XFlush(
+    Display *display)
+{
+    return 0;
+}
+
+int
+XGrabServer(
+    Display *display)
+{
+    return 0;
+}
+
+int
+XUngrabServer(
+    Display *display)
+{
+    return 0;
+}
+
+int
+XFree(
+    void *data)
+{
+	if ((data) != NULL) {
+		ckfree(data);
+	}
+    return 0;
+}
+
+int
+XNoOp(
+    Display *display)
+{
+	display->request++;
+    return 0;
+}
+
+int
+XSynchronize(
+    Display *display,
+    Bool bool)
+{
+	display->request++;
+    return 0;
+}
+
+int
+XSync(
+    Display *display,
+    Bool bool)
+{
+	display->request++;
+    return 0;
+}
+
+VisualID
+XVisualIDFromVisual(
+    Visual *visual)
+{
+    return visual->visualid;
+}
